[tool.poetry]
name = "EdgarSEC"
version = "0.1.0"
description = "A Python interface for interacting with the SEC EDGAR API"
authors = ["Hudson and Thames Quantitative Research <opensource@hudsonthames.org>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://www.hudsonthames.org/"
repository = "https://github.com/hudson-and-thames/EdgarSec"
documentation = "https://hudson-and-thames-edgar-sec.readthedocs-hosted.com/en/latest/index.html"
keywords = ["arbitrage", "finance", "investment", "education"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial :: Investment"
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/hudson-and-thames/EdgarSec/issues"
"Blog" = "https://hudsonthames.org/blog/"
"Apprenticeship Program" = "https://hudsonthames.org/apprenticeship-program/"

packages = [
    { include = "arbitragelab" }
]

exclude = ["docs", "tests"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.32.3"
pandas = "^2.2.2"
ratelimit = "^2.2.1"
pydantic = "2.7.4"


[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.tests.dependencies]
coverage = "7.2.7"
pylint = "3.1.0"
pytest = "7.3.1"
pytest-cov = "3.0.0"

[tool.poetry.group.docs.dependencies]
releases = "1.6.3"
jinja2 = "<3.1"
docutils = "0.18.1"
hudsonthames-sphinx-theme = "0.1.5"
myst-parser = "2.0.0" #3.0.0
sphinx-rtd-theme = "2.0.0" #2.0.0
sphinx-tabs = "3.4.1" #3.4.5
sphinx = "6.2.1"
sphinx-autoapi = "3.0.0"
sphinx-copybutton = "0.5.2"
six = "*"

[tool.poetry.extras]
tests = ["coverage", "pylint", "pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-tabs", "sphinx-autoapi", "sphinx-copybutton", "myst-parser", "hudsonthames-sphinx-theme", "docutils", "jinja2", "releases"]